[gd_scene load_steps=15 format=3 uid="uid://btnnre7xy6ffp"]

[ext_resource type="Script" path="res://Scene/igris.gd" id="1_jltwo"]
[ext_resource type="Texture2D" uid="uid://dby2tq1q80x0s" path="res://asset/Animation/Igris/igris_idle.png" id="1_l4ouh"]
[ext_resource type="Texture2D" uid="uid://c550s4sh0l0e" path="res://asset/Animation/Igris/igris_atk_1.png" id="2_b2frt"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_ql51u"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_6nwe8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_player_state.gd" id="5_tff67"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_jy7xb"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_58ern"]

[sub_resource type="Animation" id="Animation_2olnl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l4ouh")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:shape:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(91, 84)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9, -16)]
}

[sub_resource type="Animation" id="Animation_rh4kb"]
resource_name = "atk_1"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b2frt")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9, -15)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 6.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:shape:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(91, 85)]
}

[sub_resource type="Animation" id="Animation_c266v"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l4ouh")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:shape:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(91, 84)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xp8d"]
_data = {
"RESET": SubResource("Animation_2olnl"),
"atk_1": SubResource("Animation_rh4kb"),
"idle": SubResource("Animation_c266v")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmpoe"]
size = Vector2(91, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0a563"]
size = Vector2(93, 86)

[node name="igris" type="CharacterBody2D" groups=["mob"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_jltwo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_l4ouh")
offset = Vector2(-9, -16)
hframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8xp8d")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_gmpoe")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_0a563")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_ql51u")

[node name="root" type="Node" parent="StateChart"]
script = ExtResource("4_6nwe8")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/root"]
script = ExtResource("5_tff67")
animation_player = NodePath("../../../AnimationPlayer")
animation_name = &"idle"

[node name="to atk 1" type="Node" parent="StateChart/root/idle"]
script = ExtResource("7_jy7xb")
to = NodePath("../../atk_1")
event = &"atk1"
delay_in_seconds = "0.0"

[node name="to hit" type="Node" parent="StateChart/root/idle"]
script = ExtResource("7_jy7xb")
to = NodePath("../../hit")
event = &"hit"
delay_in_seconds = "0.0"

[node name="atk_1" type="Node" parent="StateChart/root"]
script = ExtResource("5_tff67")
animation_player = NodePath("../../../AnimationPlayer")
animation_name = &"atk_1"

[node name="to idle" type="Node" parent="StateChart/root/atk_1"]
script = ExtResource("7_jy7xb")
to = NodePath("../../idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="hit" type="Node" parent="StateChart/root"]
script = ExtResource("8_58ern")

[node name="to idle" type="Node" parent="StateChart/root/hit"]
script = ExtResource("7_jy7xb")
to = NodePath("../../idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="to death" type="Node" parent="StateChart/root/hit"]
script = ExtResource("7_jy7xb")
to = NodePath("../../death")
event = &"death"
delay_in_seconds = "0.0"

[node name="death" type="Node" parent="StateChart/root"]
script = ExtResource("8_58ern")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="state_entered" from="StateChart/root/hit" to="." method="_on_hit_state_entered"]
[connection signal="state_entered" from="StateChart/root/death" to="." method="_on_death_state_entered"]
